--- a/app/src/main/res/layout/fragment_movies_ticket_confirmation.xml
+++ b/app/src/main/res/layout/fragment_movies_ticket_confirmation.xml
@@ -43,7 +43,7 @@
                 android:layout_below="@+id/llDetailsMoviesTicketConfirmation"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/margin_45dp"
-                app:srcCompat="@drawable/qr_code" />
+                tools:src="@drawable/qr_code" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvQRCodeMoviesTicketConfirmation"
